WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51264
Interrupted accelerated animation can break later transitions
https://bugs.webkit.org/show_bug.cgi?id=51264
Summary
Interrupted accelerated animation can break later transitions
Simon Fraser (smfr)
Reported
2010-12-17 10:42:11 PST
If we're waiting for an accelerated animation to start when leaving the page, the AnimationController can get stuck in a bad state that causes later transitions to fail.
Attachments
Step 1: some code cleanup
(6.75 KB, patch)
2010-12-17 11:00 PST
,
Simon Fraser (smfr)
cmarrin
: review+
Details
Formatted Diff
Diff
Step 2: actual bug fix
(6.09 KB, patch)
2010-12-17 12:11 PST
,
Simon Fraser (smfr)
cmarrin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-12-17 10:42:52 PST
<
rdar://problem/8767714
>
Simon Fraser (smfr)
Comment 2
2010-12-17 11:00:12 PST
Created
attachment 76893
[details]
Step 1: some code cleanup
Simon Fraser (smfr)
Comment 3
2010-12-17 12:11:51 PST
Created
attachment 76901
[details]
Step 2: actual bug fix
WebKit Review Bot
Comment 4
2010-12-17 12:16:16 PST
Attachment 76901
[details]
did not build on gtk: Build output:
http://queues.webkit.org/results/7242018
WebKit Review Bot
Comment 5
2010-12-17 12:19:56 PST
Attachment 76901
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7197011
Early Warning System Bot
Comment 6
2010-12-17 12:23:31 PST
Attachment 76901
[details]
did not build on qt: Build output:
http://queues.webkit.org/results/7318018
WebKit Review Bot
Comment 7
2010-12-17 12:33:02 PST
Attachment 76901
[details]
did not build on mac: Build output:
http://queues.webkit.org/results/7252020
Simon Fraser (smfr)
Comment 8
2010-12-17 12:33:44 PST
Comment on
attachment 76901
[details]
Step 2: actual bug fix This patch depends on the former, hence the build errors.
Build Bot
Comment 9
2010-12-17 12:34:22 PST
Attachment 76901
[details]
did not build on win: Build output:
http://queues.webkit.org/results/7250016
WebKit Review Bot
Comment 10
2010-12-17 12:43:22 PST
Attachment 76901
[details]
did not build on chromium: Build output:
http://queues.webkit.org/results/7205022
Simon Fraser (smfr)
Comment 11
2010-12-17 13:24:12 PST
http://trac.webkit.org/changeset/74286
http://trac.webkit.org/changeset/74287
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug