2010-12-17  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Chris Marrin.

        Interrupted accelerated animation can break later transitions
        https://bugs.webkit.org/show_bug.cgi?id=51264

        Step 1: code cleanup.
        Rename "responseWait" variables to "startTimeResponseWait", to make it clear
        the kind of response that is being waited for.

        Make a couple of methods private.

        No behavioral changes, so no tests.

        * page/animation/AnimationController.cpp:
        (WebCore::AnimationControllerPrivate::AnimationControllerPrivate):
        (WebCore::AnimationControllerPrivate::endAnimationUpdate):
        (WebCore::AnimationControllerPrivate::receivedStartTimeResponse):
        (WebCore::AnimationControllerPrivate::addToStartTimeResponseWaitList):
        (WebCore::AnimationControllerPrivate::removeFromStartTimeResponseWaitList):
        (WebCore::AnimationControllerPrivate::startTimeResponse):
        * page/animation/AnimationControllerPrivate.h:

Canonical link: https://commits.webkit.org/64628@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74286 268f45cc-cd09-0410-ab3c-d52691b4dbfc