WebCore/page/animation/AnimationController.cpp
@@ -53,9 +53,9 @@ AnimationControllerPrivate::AnimationControllerPrivate(Frame* frame)
     , m_beginAnimationUpdateTime(cBeginAnimationUpdateTimeNotSet)
     , m_styleAvailableWaiters(0)
     , m_lastStyleAvailableWaiter(0)
-    , m_responseWaiters(0)
-    , m_lastResponseWaiter(0)
-    , m_waitingForResponse(false)
+    , m_startTimeResponseWaiters(0)
+    , m_lastStartTimeResponseWaiter(0)
+    , m_waitingForStartTimeResponse(false)
 {
 }
 
@@ -323,13 +323,13 @@ double AnimationControllerPrivate::beginAnimationUpdateTime()
 void AnimationControllerPrivate::endAnimationUpdate()
 {
     styleAvailable();
-    if (!m_waitingForResponse)
+    if (!m_waitingForStartTimeResponse)
         startTimeResponse(beginAnimationUpdateTime());
 }
 
 void AnimationControllerPrivate::receivedStartTimeResponse(double time)
 {
-    m_waitingForResponse = false;
+    m_waitingForStartTimeResponse = false;
     startTimeResponse(time);
 }
 
@@ -432,29 +432,29 @@ void AnimationControllerPrivate::addToStartTimeResponseWaitList(AnimationBase* a
     ASSERT(!animation->next());
     
     if (willGetResponse)
-        m_waitingForResponse = true;
+        m_waitingForStartTimeResponse = true;
     
-    if (m_responseWaiters)
-        m_lastResponseWaiter->setNext(animation);
+    if (m_startTimeResponseWaiters)
+        m_lastStartTimeResponseWaiter->setNext(animation);
     else
-        m_responseWaiters = animation;
+        m_startTimeResponseWaiters = animation;
         
-    m_lastResponseWaiter = animation;
+    m_lastStartTimeResponseWaiter = animation;
     animation->setNext(0);
 }
 
 void AnimationControllerPrivate::removeFromStartTimeResponseWaitList(AnimationBase* animationToRemove)
 {
     AnimationBase* prevAnimation = 0;
-    for (AnimationBase* animation = m_responseWaiters; animation; animation = animation->next()) {
+    for (AnimationBase* animation = m_startTimeResponseWaiters; animation; animation = animation->next()) {
         if (animation == animationToRemove) {
             if (prevAnimation)
                 prevAnimation->setNext(animation->next());
             else
-                m_responseWaiters = animation->next();
+                m_startTimeResponseWaiters = animation->next();
             
-            if (m_lastResponseWaiter == animation)
-                m_lastResponseWaiter = prevAnimation;
+            if (m_lastStartTimeResponseWaiter == animation)
+                m_lastStartTimeResponseWaiter = prevAnimation;
                 
             animationToRemove->setNext(0);
         }
@@ -465,15 +465,15 @@ void AnimationControllerPrivate::removeFromStartTimeResponseWaitList(AnimationBa
 void AnimationControllerPrivate::startTimeResponse(double time)
 {
     // Go through list of waiters and send them on their way
-    for (AnimationBase* animation = m_responseWaiters; animation; ) {
+    for (AnimationBase* animation = m_startTimeResponseWaiters; animation; ) {
         AnimationBase* nextAnimation = animation->next();
         animation->setNext(0);
         animation->onAnimationStartResponse(time);
         animation = nextAnimation;
     }
     
-    m_responseWaiters = 0;
-    m_lastResponseWaiter = 0;
+    m_startTimeResponseWaiters = 0;
+    m_lastStartTimeResponseWaiter = 0;
 }
 
 AnimationController::AnimationController(Frame* frame)
